Finalize Script API plan
